[package]
name = "runeterra_backend"
version = "0.1.0"
authors = ["kyle <kyleoneill24@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
diesel = { version = "1.0.0", features = ["sqlite"] }
dotenv = "0.9.0"
